--- a/mickael-blog/src/css/custom.css
+++ b/mickael-blog/src/css/custom.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Poppins;
+  src: url(/static/Poppins-Regular.ttf);
+}
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -6,21 +10,33 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #1a237e;
+  --ifm-color-primary-dark: #171f71;
+  --ifm-color-primary-darker: #161e6b;
+  --ifm-color-primary-darkest: #121858;
+  --ifm-color-primary-light: #1d268b;
+  --ifm-color-primary-lighter: #1e2891;
+  --ifm-color-primary-lightest: #222da4;
   --ifm-code-font-size: 95%;
   --ifm-navbar-background-color : transparent;
- 
+  --ifm-heading-font-family: Poppins, sans-serif;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 .navbar-sidebar{
   background-color: #fff;
 }
+.navbar{
+  box-shadow: none;
+  transition: background-color 0.3s ease;
+}
+
+h2 {
+  font-size: 32px; /* Taille de police pour les titres de section */
+  font-weight: bold; /* Épaisseur de la police (en gras) */
+  margin-bottom: 24px; /* Espacement en bas des titres */
+}
+
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 /* [data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
