--- a/mickael-blog/src/css/custom.css
+++ b/mickael-blog/src/css/custom.css
@@ -30,6 +30,10 @@
   transition: background-color 0.3s ease;
 }
 
+.container{
+  text-align: center;
+}
+
 h2 {
   font-size: 32px; /* Taille de police pour les titres de section */
   font-weight: bold; /* Épaisseur de la police (en gras) */
