--- a/mickael-blog/src/pages/styles.css
+++ b/mickael-blog/src/pages/styles.css
@@ -29,14 +29,16 @@
 
 section {  
   width: 100%;   
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center; 
   flex-direction: column;
+  margin: 50px 0;
 }
 
 #intro{
   margin-top: -60px;
+  height: 100vh;
   
 }
 
